<resources>

    <string name="navigation_debug">debug</string>
    <string name="app_name">Movie02</string>
    <string name="app_slogan">简约精彩影讯</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_settings">设置</string>
    <string name="navigation_share">分享</string>
    <string name="navigation_evaluate">评价</string>
    <string name="navigation_about">关于</string>
    <string name="has_released">热门</string>
    <string name="going_to_release">推荐</string>
    <string name="title_activity_about">关于</string>
    <string name="reload_data">重新加载</string>
    <string name="director">导演</string>
    <string name="starring">演员</string>
    <string name="story_brief">剧情简介</string>
    <string name="format_indicator">%1$d/%2$d</string>
    <string name="location_default">位置</string>
    <string name="settings">设置</string>
    <string name="hint_located_city">定位成功，你所在的地区是：%s</string>
    <string name="confirm">确定</string>
    <string name="locate_again">重新定位</string>
    <string name="welcome">很高兴见到你</string>
    <string name="contact_me">联系我</string>
    <string name="open_source_address">项目已开源，喜欢就star一个哦</string>
    <string name="thanks">致谢</string>
    <string name="welcome_detail">这是一枚展示当地热映电影资讯和票房榜的小应用，简约、优雅、精彩、即看即走。希望你喜欢。(๑✦ω✦)✨</string>
    <string name="gmail_address">Chauvet910@gmail.com</string>
    <string name="github_page">https://github.com/woxingxiao/GracefulMovies</string>
    <string name="hint_clipboard">%1$s“%2$s”已复制到粘贴板</string>
    <string name="open_source_permission">开源许可</string>
    <string name="license"><![CDATA[<u>LICENSE</u>]]></string>
    <string name="thanks_list">强大的开源社区\niconfont.cn的海量图标资源</string>
    <string name="share_out_description">"简影讯，简约多彩影讯。速查热门电影影讯、评分和票房，即看即走。下载地址：https://fir.im/jyx"</string>
    <string name="hint_query_by_upper_city">使用【%1$s】查询无数据，使用其上级行政区【%2$s】查询？</string>
    <string name="questionnaire_url">https://gdgdocs.org/forms/d/e/1FAIpQLSdQF1HvXnvx_vki00RUTKR3PP0-ghTpYoxjfZCZWs5IAH41Pw/viewform</string>
    <string name="box_office">票房</string>
    <string name="hint_box_office_day">单日票房（万）</string>
    <string name="hint_box_office_sum">累计票房（万）</string>
    <string name="hint_released_days">上映天数</string>
    <string name="hint_box_office_rate">票房占比</string>
    <string name="hint_box_office_attention">排名按单日票房成绩。\n数据由第三方提供，仅供参考。</string>

    <string name="key_cache">key_cache</string>
    <string name="key_update">key_update</string>
    <string name="key_feedback">key_feedback</string>
    <string name="str_movie_info_title">电影资料</string>
    <string name="str_look_all_info">查看所有资料  ＞</string>
    <string name="str_movie_data">电影资料</string>
    <string name="str_search_movie">搜片</string>
    <string name="str_cancel">取消</string>
    <string name="search_movie">搜索你最想看的电影吧..</string>
    <string name="str_state_loading">数据加载中…</string>
    <string name="str_state_empty">数据空空如也…</string>
    <string name="str_state_error">数据加载失败，请点击重试…</string>
    <string name="base_str_home">推荐</string>
    <string name="base_str_category">分类</string>
    <string name="base_str_trend">趋势</string>
    <string name="base_str_me">我的</string>
    <string name="str_movie_history">浏览历史</string>
    <string name="str_check_update">检查更新</string>
    <string name="str_about">关于</string>
    <string name="str_login">登录</string>

</resources>
