<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/id_rl_title"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:background="@drawable/pic_movies"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/id_iv_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/icon_default_movie" />

            <ImageView
                android:id="@+id/id_iv_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="@dimen/dp_12"
                android:paddingTop="@dimen/dp_12"
                android:paddingBottom="@dimen/dp_12"
                android:src="@drawable/img_arrow_right" />

            <TextView
                android:id="@+id/id_tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_toStartOf="@id/id_iv_right"
                android:layout_toEndOf="@id/id_iv_icon"
                android:ellipsize="end"
                android:lines="1"
                android:text="爱上电影的小哥哥哥"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/id_tv_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/id_tv_username"
                android:layout_alignStart="@id/id_tv_username"
                android:layout_alignEnd="@id/id_tv_username"
                android:layout_marginTop="8dp"
                android:text="电影签名:在最好的年纪遇上最好的你..."
                android:textColor="@color/white"
                android:textSize="13sp" />

        </RelativeLayout>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.xing.project.movie.view.UserSettingItemLayout
                android:id="@+id/id_movie_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:left_res="@drawable/tab_mine_history"
                app:tv_content="@string/str_movie_history" />

            <com.xing.project.movie.view.UserSettingItemLayout
                android:id="@+id/id_check_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:left_res="@drawable/tab_mine_update"
                app:tv_content="@string/str_check_update" />

            <com.xing.project.movie.view.UserSettingItemLayout
                android:id="@+id/id_item_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:left_res="@drawable/tab_mine_about"
                app:tv_content="@string/str_about" />

            <com.xing.project.movie.view.UserSettingItemLayout
                android:id="@+id/id_item_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                app:bottom_line_show="false"
                app:left_res="@drawable/tab_mine_logout"
                app:right_setting_arrow_show="false"
                app:tv_content="@string/str_login" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>