<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.xw.repo.widget.BounceScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/header_bg_iv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_bar_height_large"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/cover_iv"
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="80dp"
                    android:contentDescription="@null"
                    android:onClick="onClick"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/pic_place_holder"/>

                <ImageView
                    android:id="@+id/id_image_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/cover_iv"
                    app:layout_constraintEnd_toEndOf="@id/cover_iv"
                    app:layout_constraintTop_toTopOf="@id/cover_iv"
                    android:onClick="gotoMovie"
                    app:layout_constraintBottom_toBottomOf="@id/cover_iv"
                    app:srcCompat="@drawable/ic_play"
                    android:tint="@color/color_white"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/name_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_18"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cover_iv"
                    app:layout_constraintTop_toTopOf="@+id/cover_iv"
                    tools:text="@string/app_name"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/name_en_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="#bbffffff"
                    android:textSize="@dimen/sp_12"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/name_tv"
                    app:layout_constraintTop_toBottomOf="@+id/name_tv"
                    tools:text="@string/app_name"/>

                <com.iarcuschin.simpleratingbar.SimpleRatingBar
                    android:id="@+id/rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    app:layout_constraintStart_toStartOf="@+id/name_en_tv"
                    app:layout_constraintTop_toBottomOf="@+id/name_en_tv"
                    app:srb_drawBorderEnabled="false"
                    app:srb_fillColor="@color/color_blue"
                    app:srb_isIndicator="true"
                    app:srb_starBackgroundColor="@android:color/white"
                    app:srb_starSize="15dp"
                    app:srb_starsSeparation="@dimen/dp_2"
                    tools:visibility="visible"/>

                <TextView
                    android:id="@+id/rating_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/rating_bar"
                    app:layout_constraintStart_toEndOf="@+id/rating_bar"
                    app:layout_constraintTop_toTopOf="@+id/rating_bar"
                    tools:text="7.8"/>

                <com.xw.project.gracefulmovies.ui.widget.TagGroup
                    android:id="@+id/type_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/rating_bar"
                    app:layout_constraintTop_toBottomOf="@+id/rating_bar"/>

                <com.xw.project.gracefulmovies.ui.widget.TagGroup
                    android:id="@+id/format_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/type_container"
                    app:layout_constraintTop_toBottomOf="@+id/type_container"/>

                <TextView
                    android:id="@+id/duration_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:textColor="#bbffffff"
                    app:layout_constraintStart_toStartOf="@+id/format_container"
                    app:layout_constraintTop_toBottomOf="@+id/format_container"
                    tools:text="120min"/>

                <TextView
                    android:id="@+id/release_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:textColor="#bbffffff"
                    app:layout_constraintStart_toStartOf="@+id/duration_tv"
                    app:layout_constraintTop_toBottomOf="@+id/duration_tv"/>

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_40"
                    android:text="@string/story_brief"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cover_iv"/>

                <com.xw.project.gracefulmovies.ui.widget.QuoteTextView
                    android:id="@+id/story_brief_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:padding="@dimen/dp_8"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text1"/>

                <TextView
                    android:id="@+id/text_movie_info_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_movie_info_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/story_brief_tv"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"/>

                <com.xw.project.gracefulmovies.view.MovieDataView
                    android:id="@+id/linear_movie_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_movie_info_title"
                    android:paddingEnd="@dimen/dp_16"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingStart="@dimen/dp_16"/>

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@string/director"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear_movie_detail"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/id_tv_director"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:padding="@dimen/dp_8"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text2"/>

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@string/starring"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/id_tv_director"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/id_tv_actor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:lineSpacingExtra="@dimen/dp_4"
                    android:padding="@dimen/dp_8"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text3"/>

                <TextView
                    android:id="@+id/text5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="剧照"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/id_tv_actor"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/id_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_24"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text5"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.xw.repo.widget.BounceScrollView>

        <View
            android:id="@+id/title_status_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_8"
            android:alpha="0"
            android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:alpha="0"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_64"
                android:includeFontPadding="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                tools:text="@string/app_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_64"
                android:layout_marginTop="@dimen/dp_4"
                android:includeFontPadding="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_12"
                tools:text="@string/app_name"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/go_back_iv"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:onClick="onClick"
            android:scaleType="center"
            android:src="@drawable/abc_ic_ab_back_material"
            android:tint="@android:color/white"/>
    </FrameLayout>

